<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/newEmailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        tools:ignore="TextFields"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="16dp" />

    <EditText
        android:id="@+id/newUsernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_below="@id/newEmailField"
        android:layout_marginTop="16dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        tools:ignore="TextFields"
        android:drawableStart="@drawable/baseline_person_outline_24"
        android:drawablePadding="16dp" />

    <EditText
        android:id="@+id/newUserPasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newUsernameField"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_new_user_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="16dp"
        tools:ignore="VisualLintTextFieldSize" />

    <RadioGroup
        android:id="@+id/experienceLevelGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newUserPasswordField"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/newToChessRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_new_to_chess"/>


        <RadioButton
            android:id="@+id/BeginnerRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_Beginner"/>

        <RadioButton
            android:id="@+id/IntermediateRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_Intermediate"/>

        <RadioButton
            android:id="@+id/AdvancedRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_Advanced"/>

    </RadioGroup>

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/experienceLevelGroup"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/button_create_account"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/createAccountButton"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/button_login"/>

</RelativeLayout>