<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">



    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:background="#10FFFFFF"
        android:minHeight="48dp"
        android:layout_marginTop="100dp"
        android:padding="10dp"
        android:drawableStart="@drawable/baseline_person_outline_24"
        android:drawablePadding="16dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/loginPasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailField"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_password"
        android:importantForAutofill="no"
        android:background="#10FFFFFF"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="16dp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginPasswordField"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/button_login" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/button_sign_up" />

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpButton"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password" />



</RelativeLayout>