<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/darker_gray">


    <!-- Add your menu items or content here -->
    <Button
        android:id="@+id/logout"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/log_out"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/changeTimerDuration"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/change_timer_duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/resetGame"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/reset_game"
        app:layout_constraintTop_toBottomOf="@+id/changeTimerDuration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/closeButton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/close"
        app:layout_constraintTop_toBottomOf="@+id/resetGame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>